--- a/src/shorelineexamproject/gui/view/LoginView.fxml
+++ b/src/shorelineexamproject/gui/view/LoginView.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.LoginViewController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="272.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.LoginViewController">
+   <children>
+      <ImageView fx:id="imgLogo" fitHeight="53.0" fitWidth="54.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <image>
+            <Image url="@../../../../images/SLLogo.PNG" />
+         </image>
+      </ImageView>
+      <JFXTextField fx:id="txtUser" focusColor="#0c8bb8" layoutX="68.0" layoutY="51.0" promptText="User" unFocusColor="#0b6074" AnchorPane.leftAnchor="68.0" AnchorPane.rightAnchor="68.0" AnchorPane.topAnchor="51.0" />
+      <JFXTextField fx:id="txtPassword" focusColor="#0c8bb8" layoutX="68.0" layoutY="88.0" promptText="Password" unFocusColor="#0b6074" AnchorPane.leftAnchor="68.0" AnchorPane.rightAnchor="68.0" AnchorPane.topAnchor="88.0" />
+      <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="156.0" layoutY="121.0" onAction="#clickLogin" text="Login" AnchorPane.leftAnchor="156.0" AnchorPane.topAnchor="121.0" />
+      <JFXButton fx:id="btnCreateUser" buttonType="RAISED" layoutX="206.0" layoutY="161.0" onAction="#clickCreateUser" text="Create User" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <Label fx:id="lblErrorMessage" layoutX="64.0" layoutY="146.0" AnchorPane.leftAnchor="68.0" AnchorPane.topAnchor="146.0" />
+   </children>
 </AnchorPane>
