--- a/src/shorelineexamproject/gui/view/ConversionView.fxml
+++ b/src/shorelineexamproject/gui/view/ConversionView.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="620.0" prefWidth="600.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
+<AnchorPane id="AnchorPane" prefHeight="620.0" prefWidth="600.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
    <children>
       <JFXButton fx:id="btnTest" layoutX="14.0" layoutY="361.0" onAction="#clickTest" text="Test" />
       <JFXTextField fx:id="txtTest" layoutX="14.0" layoutY="328.0" />
-      <JFXListView fx:id="lstTest" layoutX="14.0" layoutY="14.0" prefHeight="280.0" prefWidth="248.0" />
       <JFXButton fx:id="btnGet" layoutX="162.0" layoutY="328.0" onAction="#clickGet" text="Get" />
       <JFXButton layoutX="455.0" layoutY="54.0" onAction="#clickCreateJSONFile" text="Create JSONFile" />
       <JFXTextField fx:id="txtJSONName" layoutX="438.0" layoutY="10.0" />
@@ -31,5 +30,6 @@
       <JFXTextField fx:id="txtLatestFinishDate" layoutX="437.0" layoutY="478.0" promptText="latestFinishDate" />
       <JFXTextField fx:id="txtEarliestStartDate" layoutX="437.0" layoutY="504.0" promptText="earliestStartDate" />
       <JFXTextField fx:id="txtLatestStartDate" layoutX="437.0" layoutY="530.0" promptText="latestStartDate" />
+      <ListView fx:id="lstHeaders" layoutX="14.0" layoutY="10.0" prefHeight="301.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
