--- a/src/shorelineexamproject/gui/view/ConversionView.fxml
+++ b/src/shorelineexamproject/gui/view/ConversionView.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="620.0" prefWidth="600.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
+<AnchorPane id="AnchorPane" prefHeight="620.0" prefWidth="600.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
    <children>
-      <JFXButton fx:id="btnGet" layoutX="177.0" layoutY="321.0" onAction="#clickGet" text="Get" />
+      <JFXButton fx:id="btnGet" layoutX="179.0" layoutY="44.0" onAction="#clickGet" text="Get" AnchorPane.bottomAnchor="551.0" AnchorPane.leftAnchor="179.0" AnchorPane.topAnchor="44.0" />
       <JFXButton layoutX="455.0" layoutY="43.0" onAction="#clickCreateJSONFile" text="Create JSONFile" />
       <JFXTextField fx:id="txtJSONName" layoutX="438.0" layoutY="10.0" />
       <Label layoutX="316.0" layoutY="14.0" text="Name of JSONFile :" />
@@ -31,13 +31,11 @@
       <JFXTextField fx:id="txtEarliestStartDate" layoutX="437.0" layoutY="504.0" promptText="earliestStartDate" text="earliestStartDate" />
       <JFXTextField fx:id="txtLatestStartDate" layoutX="437.0" layoutY="530.0" promptText="latestStartDate" text="latestStartDate" />
 
-           <ListView fx:id="lstHeaders" layoutX="14.0" layoutY="10.0" onDragDetected="#dragLstHeaders" prefHeight="301.0" prefWidth="200.0" />
+           <ListView fx:id="lstHeaders" layoutX="14.0" layoutY="10.0" onDragDetected="#dragLstHeaders" prefHeight="512.0" prefWidth="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="75.0" />
 
 
-      <JFXButton fx:id="btnTask" layoutX="38.0" layoutY="490.0" onAction="#clickTask" text="Start" />
-      <JFXButton fx:id="btnPauseTask" layoutX="91.0" layoutY="490.0" onAction="#clickPauseTask" text="Pause" />
-      <JFXProgressBar fx:id="prgBar" layoutX="38.0" layoutY="476.0" prefHeight="5.0" prefWidth="127.0" />
-      <ProgressBar fx:id="prgBar1" layoutX="38.0" layoutY="450.0" prefHeight="18.0" prefWidth="95.0" progress="0.0" />
+      <JFXButton fx:id="btnTask" layoutX="224.0" layoutY="31.0" onAction="#clickTask" text="Start" />
+      <JFXButton fx:id="btnPauseTask" layoutX="271.0" layoutY="31.0" onAction="#clickPauseTask" text="Pause" />
       <JFXTextField fx:id="txtVarType" layoutX="276.0" layoutY="166.0" onDragDropped="#dropTxtVarType" onDragOver="#overTxtTest" promptText="type" />
       <JFXTextField fx:id="txtVarUserStatus" layoutX="275.0" layoutY="242.0" onDragDropped="#dropTxtVarUserStatus" onDragOver="#overTxtTest" promptText="userStatus" />
       <JFXTextField fx:id="txtVarSystemStatus" layoutX="275.0" layoutY="216.0" onDragDropped="#dropTxtVarSystemStatus" onDragOver="#overTxtTest" promptText="systemStatus" />
@@ -53,6 +51,11 @@
       <Label layoutX="275.0" layoutY="80.0" text="Values:" />
       <Label layoutX="276.0" layoutY="429.0" text="planning" />
       <Label layoutX="437.0" layoutY="429.0" text="planning" />
+      <ImageView fitHeight="66.0" fitWidth="73.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="555.8379898071289" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
+         <image>
+            <Image url="@../../../../images/SLLogo.PNG" />
+         </image>
+      </ImageView>
 
    </children>
 </AnchorPane>
