--- a/src/shorelineexamproject/gui/view/ConversionView.fxml
+++ b/src/shorelineexamproject/gui/view/ConversionView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="620.0" prefWidth="600.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
+<AnchorPane id="AnchorPane" prefHeight="620.0" prefWidth="600.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
    <children>
       <JFXButton fx:id="btnGet" layoutX="179.0" layoutY="44.0" onAction="#clickGet" text="Get" AnchorPane.bottomAnchor="551.0" AnchorPane.leftAnchor="179.0" AnchorPane.topAnchor="44.0" />
       <JFXButton layoutX="455.0" layoutY="43.0" onAction="#clickCreateJSONFile" text="Create JSONFile" />
@@ -36,14 +36,14 @@
 
       <JFXButton fx:id="btnTask" layoutX="224.0" layoutY="31.0" onAction="#clickTask" text="Start" />
       <JFXButton fx:id="btnPauseTask" layoutX="271.0" layoutY="31.0" onAction="#clickPauseTask" text="Pause" />
-      <JFXTextField fx:id="txtVarType" layoutX="276.0" layoutY="166.0" onDragDropped="#dropTxtVarType" onDragOver="#overTxtTest" promptText="type" />
-      <JFXTextField fx:id="txtVarUserStatus" layoutX="275.0" layoutY="242.0" onDragDropped="#dropTxtVarUserStatus" onDragOver="#overTxtTest" promptText="userStatus" />
-      <JFXTextField fx:id="txtVarSystemStatus" layoutX="275.0" layoutY="216.0" onDragDropped="#dropTxtVarSystemStatus" onDragOver="#overTxtTest" promptText="systemStatus" />
-      <JFXTextField fx:id="txtVarExternalWorkOrderid" layoutX="276.0" layoutY="190.0" onDragDropped="#dropTxtVarExternalWorkOrderid" onDragOver="#overTxtTest" promptText="externalWorkOrderId" />
-      <JFXTextField fx:id="txtVarAssetSerialNumber" layoutX="275.0" layoutY="141.0" onDragDropped="#dropTxtVarAssetSerialNumber" onDragOver="#overTxtTest" promptText="assetSerialNumber" />
-      <JFXTextField fx:id="txtVarName" layoutX="275.0" layoutY="320.0" onDragDropped="#dropTxtVarName" onDragOver="#overTxtTest" promptText="name" />
-      <JFXTextField fx:id="txtVarPriority" layoutX="276.0" layoutY="347.0" onDragDropped="#dropTxtVarPriority" onDragOver="#overTxtTest" promptText="priority" />
-      <JFXTextField fx:id="txtVarEstimatedTime" layoutX="276.0" layoutY="555.0" onDragDropped="#dropTxtVarEstimatedTime" onDragOver="#overTxtTest" promptText="estimatedTime" />
+      <JFXTextField fx:id="txtVarType" layoutX="276.0" layoutY="166.0" onDragDropped="#dropTxtVarType" onDragOver="#overTxtTest" promptText="Order Type" />
+      <JFXTextField fx:id="txtVarUserStatus" layoutX="275.0" layoutY="242.0" onDragDropped="#dropTxtVarUserStatus" onDragOver="#overTxtTest" promptText="User Status" />
+      <JFXTextField fx:id="txtVarSystemStatus" layoutX="275.0" layoutY="216.0" onDragDropped="#dropTxtVarSystemStatus" onDragOver="#overTxtTest" promptText="System Status" />
+      <JFXTextField fx:id="txtVarExternalWorkOrderid" layoutX="276.0" layoutY="190.0" onDragDropped="#dropTxtVarExternalWorkOrderid" onDragOver="#overTxtTest" promptText="Order" />
+      <JFXTextField fx:id="txtVarAssetSerialNumber" layoutX="275.0" layoutY="141.0" onDragDropped="#dropTxtVarAssetSerialNumber" onDragOver="#overTxtTest" promptText="asset.id" />
+      <JFXTextField fx:id="txtVarName" layoutX="275.0" layoutY="320.0" onDragDropped="#dropTxtVarName" onDragOver="#overTxtTest" promptText="opr. short text" />
+      <JFXTextField fx:id="txtVarPriority" layoutX="276.0" layoutY="347.0" onDragDropped="#dropTxtVarPriority" onDragOver="#overTxtTest" promptText="Priority" />
+      <JFXTextField fx:id="txtVarEstimatedTime" layoutX="276.0" layoutY="555.0" onDragDropped="#dropTxtVarEstimatedTime" onDragOver="#overTxtTest" promptText="estimatedTime?" />
       <JFXTextField fx:id="txtVarLatestFinishDate" layoutX="275.0" layoutY="477.0" onDragDropped="#dropTxtVarLatestFinishDate" onDragOver="#overTxtTest" promptText="latestFinishDate" />
       <JFXTextField fx:id="txtVarEarliestStartDate" layoutX="275.0" layoutY="503.0" onDragDropped="#dropTxtVarEarliestStartDate" onDragOver="#overTxtTest" promptText="earliestStartDate" />
       <JFXTextField fx:id="txtVarLatestStartDate" layoutX="275.0" layoutY="529.0" onDragDropped="#dropTxtVarLatestStartDate" onDragOver="#overTxtTest" promptText="latestStartDate" />
