--- a/src/shorelineexamproject/gui/view/ConversionView.fxml
+++ b/src/shorelineexamproject/gui/view/ConversionView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -8,53 +9,55 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="727.0" prefWidth="693.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
+<AnchorPane id="AnchorPane" prefHeight="727.0" prefWidth="625.0" stylesheets="@../css/CSS.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shorelineexamproject.gui.controller.ConversionViewController">
    <children>
-      <JFXButton fx:id="btnGet" layoutX="179.0" layoutY="44.0" onAction="#clickGet" ripplerFill="#0c8bb8" text="Get" AnchorPane.leftAnchor="179.0" AnchorPane.topAnchor="44.0" />
+      <JFXButton fx:id="btnGet" layoutX="224.0" layoutY="88.0" onAction="#clickGet" ripplerFill="#0c8bb8" text="Get" AnchorPane.leftAnchor="224.0" AnchorPane.topAnchor="85.0" />
       <JFXButton layoutX="559.0" layoutY="27.0" onAction="#clickCreateJSONFile" ripplerFill="#0c8bb8" text="Create JSONFile" AnchorPane.bottomAnchor="675.0" AnchorPane.rightAnchor="28.0" />
       <JFXTextField fx:id="txtJSONName" layoutX="438.0" layoutY="10.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="173.0" />
-      <Label layoutX="266.0" layoutY="692.0" text="Name of JSONFile :" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="318.0" />
+      <Label layoutX="266.0" layoutY="692.0" text="JSON name:" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="318.0" />
 
-      <JFXTextField fx:id="txtType" layoutX="537.0" layoutY="166.0" promptText="type" text="type" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="166.0" />
-      <JFXTextField fx:id="txtUserStatus" layoutX="437.0" layoutY="243.0" promptText="userStatus" text="userStatus" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="265.0" />
-      <JFXTextField fx:id="txtSystemStatus" layoutX="437.0" layoutY="217.0" promptText="systemStatus" text="systemStatus" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="232.0" />
-      <JFXTextField fx:id="txtExternalWorkOrderid" layoutX="530.0" layoutY="205.0" promptText="externalWorkOrderId" text="externalWorkOrderId" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="199.0" />
-      <JFXTextField fx:id="txtAssetSerialNumber" layoutX="522.0" layoutY="146.0" promptText="assetSerialNumber" text="assetSerialNumber" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="133.0" />
-      <JFXTextField fx:id="txtSiteName" layoutX="544.0" layoutY="116.0" promptText="siteName" text="siteName" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="100.0" />
-      <JFXTextField fx:id="txtCreatedOn" layoutX="530.0" layoutY="296.0" promptText="createdOn" text="createdOn" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="298.0" />
-      <JFXTextField fx:id="txtCreatedBy" layoutX="530.0" layoutY="347.0" promptText="createdBy" text="createdBy" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="331.0" />
-      <JFXTextField fx:id="txtName" layoutX="530.0" layoutY="404.0" promptText="name" text="name" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="364.0" />
-      <JFXTextField fx:id="txtPriority" layoutX="530.0" layoutY="446.0" promptText="priority" text="priority" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="397.0" />
-      <JFXTextField fx:id="txtStatus" layoutX="530.0" layoutY="434.0" promptText="status" text="status" AnchorPane.rightAnchor="28.0" />
-      <JFXTextField fx:id="txtEstimatedTime" layoutX="544.0" layoutY="627.0" promptText="estimatedTime" text="estimatedTime" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="610.0" />
-      <JFXTextField fx:id="txtLatestFinishDate" layoutX="437.0" layoutY="478.0" promptText="latestFinishDate" text="latestFinishDate" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="511.0" />
-      <JFXTextField fx:id="txtEarliestStartDate" layoutX="544.0" layoutY="577.0" promptText="earliestStartDate" text="earliestStartDate" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="544.0" />
-      <JFXTextField fx:id="txtLatestStartDate" layoutX="455.0" layoutY="524.0" promptText="latestStartDate" text="latestStartDate" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="577.0" />
+      <JFXTextField fx:id="txtType" focusColor="#0c8bb8" layoutX="537.0" layoutY="166.0" promptText="type" text="type" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="166.0" />
+      <JFXTextField fx:id="txtUserStatus" focusColor="#0c8bb8" layoutX="437.0" layoutY="243.0" promptText="userStatus" text="userStatus" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="265.0" />
+      <JFXTextField fx:id="txtSystemStatus" focusColor="#0c8bb8" layoutX="437.0" layoutY="217.0" promptText="systemStatus" text="systemStatus" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="232.0" />
+      <JFXTextField fx:id="txtExternalWorkOrderid" focusColor="#0c8bb8" layoutX="530.0" layoutY="205.0" promptText="externalWorkOrderId" text="externalWorkOrderId" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="199.0" />
+      <JFXTextField fx:id="txtAssetSerialNumber" focusColor="#0c8bb8" layoutX="522.0" layoutY="146.0" promptText="assetSerialNumber" text="assetSerialNumber" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="133.0" />
+      <JFXTextField fx:id="txtSiteName" focusColor="#0c8bb8" layoutX="544.0" layoutY="116.0" promptText="siteName" text="siteName" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="100.0" />
+      <JFXTextField fx:id="txtCreatedOn" focusColor="#0c8bb8" layoutX="530.0" layoutY="296.0" promptText="createdOn" text="createdOn" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="298.0" />
+      <JFXTextField fx:id="txtCreatedBy" focusColor="#0c8bb8" layoutX="530.0" layoutY="347.0" promptText="createdBy" text="createdBy" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="331.0" />
+      <JFXTextField fx:id="txtName" focusColor="#0c8bb8" layoutX="530.0" layoutY="404.0" promptText="name" text="name" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="364.0" />
+      <JFXTextField fx:id="txtPriority" focusColor="#0c8bb8" layoutX="530.0" layoutY="446.0" promptText="priority" text="priority" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="397.0" />
+      <JFXTextField fx:id="txtStatus" focusColor="#0c8bb8" layoutX="530.0" layoutY="434.0" promptText="status" text="status" AnchorPane.rightAnchor="28.0" />
+      <JFXTextField fx:id="txtEstimatedTime" focusColor="#0c8bb8" layoutX="544.0" layoutY="627.0" promptText="estimatedTime" text="estimatedTime" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="610.0" />
+      <JFXTextField fx:id="txtLatestFinishDate" focusColor="#0c8bb8" layoutX="437.0" layoutY="478.0" promptText="latestFinishDate" text="latestFinishDate" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="511.0" />
+      <JFXTextField fx:id="txtEarliestStartDate" focusColor="#0c8bb8" layoutX="544.0" layoutY="577.0" promptText="earliestStartDate" text="earliestStartDate" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="544.0" />
+      <JFXTextField fx:id="txtLatestStartDate" focusColor="#0c8bb8" layoutX="455.0" layoutY="524.0" promptText="latestStartDate" text="latestStartDate" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="577.0" />
 
-           <ListView fx:id="lstHeaders" layoutX="14.0" layoutY="10.0" onDragDetected="#dragLstHeaders" prefHeight="512.0" prefWidth="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="75.0" />
+           <ListView fx:id="lstHeaders" layoutX="14.0" layoutY="10.0" onDragDetected="#dragLstHeaders" prefHeight="512.0" prefWidth="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="85.0" />
 
 
-      <JFXButton fx:id="btnTask" layoutX="521.0" layoutY="688.0" onAction="#clickTask" ripplerFill="#0c8bb8" text="Start" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="128.0" />
-      <JFXButton fx:id="btnPauseTask" layoutX="565.0" layoutY="688.0" onAction="#clickPauseTask" ripplerFill="#0c8bb8" text="Pause" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="78.0" />
-      <JFXTextField fx:id="txtVarType" layoutX="371.0" layoutY="166.0" onDragDropped="#dropTxtVarType" onDragOver="#overTxtTest" promptText="type" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="166.0" />
-      <JFXTextField fx:id="txtVarUserStatus" layoutX="371.0" layoutY="265.0" onDragDropped="#dropTxtVarUserStatus" onDragOver="#overTxtTest" promptText="userStatus" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="265.0" />
-      <JFXTextField fx:id="txtVarSystemStatus" layoutX="373.0" layoutY="232.0" onDragDropped="#dropTxtVarSystemStatus" onDragOver="#overTxtTest" promptText="systemStatus" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="232.0" />
-      <JFXTextField fx:id="txtVarExternalWorkOrderid" layoutX="371.0" layoutY="199.0" onDragDropped="#dropTxtVarExternalWorkOrderid" onDragOver="#overTxtTest" promptText="externalWorkOrderId" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="199.0" />
-      <JFXTextField fx:id="txtVarAssetSerialNumber" layoutX="371.0" layoutY="133.0" onDragDropped="#dropTxtVarAssetSerialNumber" onDragOver="#overTxtTest" promptText="assetSerialNumber" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="133.0" />
-      <JFXTextField fx:id="txtVarName" layoutX="371.0" layoutY="364.0" onDragDropped="#dropTxtVarName" onDragOver="#overTxtTest" promptText="name" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="364.0" />
-      <JFXTextField fx:id="txtVarPriority" layoutX="371.0" layoutY="397.0" onDragDropped="#dropTxtVarPriority" onDragOver="#overTxtTest" promptText="priority" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="397.0" />
-      <JFXTextField fx:id="txtVarEstimatedTime" layoutX="395.0" layoutY="610.0" onDragDropped="#dropTxtVarEstimatedTime" onDragOver="#overTxtTest" promptText="estimatedTime" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="610.0" />
-      <JFXTextField fx:id="txtVarLatestFinishDate" layoutX="388.0" layoutY="511.0" onDragDropped="#dropTxtVarLatestFinishDate" onDragOver="#overTxtTest" promptText="latestFinishDate" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="511.0" />
-      <JFXTextField fx:id="txtVarEarliestStartDate" layoutX="388.0" layoutY="544.0" onDragDropped="#dropTxtVarEarliestStartDate" onDragOver="#overTxtTest" promptText="earliestStartDate" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="544.0" />
-      <JFXTextField fx:id="txtVarLatestStartDate" layoutX="395.0" layoutY="577.0" onDragDropped="#dropTxtVarLatestStartDate" onDragOver="#overTxtTest" promptText="latestStartDate" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="577.0" />
+      <JFXButton fx:id="btnTask" layoutX="494.0" layoutY="688.0" onAction="#clickTask" ripplerFill="#0c8bb8" text="Start" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="494.0" />
+      <JFXButton fx:id="btnPauseTask" layoutX="543.0" layoutY="688.0" onAction="#clickPauseTask" ripplerFill="#0c8bb8" text="Pause" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="543.0" />
+      <JFXTextField fx:id="txtVarType" focusColor="#0c8bb8" layoutX="371.0" layoutY="166.0" onDragDropped="#dropTxtVarType" onDragOver="#overTxtTest" promptText="type" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="166.0" />
+      <JFXTextField fx:id="txtVarUserStatus" focusColor="#0c8bb8" layoutX="371.0" layoutY="265.0" onDragDropped="#dropTxtVarUserStatus" onDragOver="#overTxtTest" promptText="userStatus" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="265.0" />
+      <JFXTextField fx:id="txtVarSystemStatus" focusColor="#0c8bb8" layoutX="373.0" layoutY="232.0" onDragDropped="#dropTxtVarSystemStatus" onDragOver="#overTxtTest" promptText="systemStatus" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="232.0" />
+      <JFXTextField fx:id="txtVarExternalWorkOrderid" focusColor="#0c8bb8" layoutX="371.0" layoutY="199.0" onDragDropped="#dropTxtVarExternalWorkOrderid" onDragOver="#overTxtTest" promptText="externalWorkOrderId" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="199.0" />
+      <JFXTextField fx:id="txtVarAssetSerialNumber" focusColor="#0c8bb8" layoutX="371.0" layoutY="133.0" onDragDropped="#dropTxtVarAssetSerialNumber" onDragOver="#overTxtTest" promptText="assetSerialNumber" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="133.0" />
+      <JFXTextField fx:id="txtVarName" focusColor="#0c8bb8" layoutX="371.0" layoutY="364.0" onDragDropped="#dropTxtVarName" onDragOver="#overTxtTest" promptText="name" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="364.0" />
+      <JFXTextField fx:id="txtVarPriority" focusColor="#0c8bb8" layoutX="371.0" layoutY="397.0" onDragDropped="#dropTxtVarPriority" onDragOver="#overTxtTest" promptText="priority" AnchorPane.rightAnchor="187.0" AnchorPane.topAnchor="397.0" />
+      <JFXTextField fx:id="txtVarEstimatedTime" focusColor="#0c8bb8" layoutX="395.0" layoutY="610.0" onDragDropped="#dropTxtVarEstimatedTime" onDragOver="#overTxtTest" promptText="estimatedTime" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="610.0" />
+      <JFXTextField fx:id="txtVarLatestFinishDate" focusColor="#0c8bb8" layoutX="388.0" layoutY="511.0" onDragDropped="#dropTxtVarLatestFinishDate" onDragOver="#overTxtTest" promptText="latestFinishDate" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="511.0" />
+      <JFXTextField fx:id="txtVarEarliestStartDate" focusColor="#0c8bb8" layoutX="388.0" layoutY="544.0" onDragDropped="#dropTxtVarEarliestStartDate" onDragOver="#overTxtTest" promptText="earliestStartDate" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="544.0" />
+      <JFXTextField fx:id="txtVarLatestStartDate" focusColor="#0c8bb8" layoutX="395.0" layoutY="577.0" onDragDropped="#dropTxtVarLatestStartDate" onDragOver="#overTxtTest" promptText="latestStartDate" AnchorPane.rightAnchor="173.0" AnchorPane.topAnchor="577.0" />
       <Label layoutX="530.0" layoutY="80.0" text="Keys:" AnchorPane.rightAnchor="133.0" AnchorPane.topAnchor="75.0" />
       <Label layoutX="371.0" layoutY="75.0" text="Values:" AnchorPane.rightAnchor="278.0" AnchorPane.topAnchor="75.0" />
       <Label layoutX="370.0" layoutY="482.0" text="Planning" AnchorPane.rightAnchor="259.0" AnchorPane.topAnchor="482.0" />
-      <ImageView fitHeight="66.0" fitWidth="73.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="555.8379898071289" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
+      <ImageView fitHeight="66.0" fitWidth="73.0" layoutX="14.0" layoutY="31.346336364746094" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="645.4916534423828" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="30.508346557617188">
          <image>
             <Image url="@SLLogo.PNG" />
          </image>
       </ImageView>
+      <JFXComboBox fx:id="cbxUser" focusColor="#0c8bb8" layoutX="96.0" layoutY="16.0" prefHeight="25.0" prefWidth="118.0" promptText="User" AnchorPane.bottomAnchor="686.0" AnchorPane.leftAnchor="96.0" AnchorPane.topAnchor="16.0" />
+      <JFXComboBox fx:id="cbxCustomization" focusColor="#0c8bb8" layoutX="96.0" layoutY="51.0" prefHeight="25.0" prefWidth="118.0" promptText="Customization" AnchorPane.bottomAnchor="651.0" AnchorPane.leftAnchor="96.0" AnchorPane.topAnchor="51.0" />
 
    </children>
 </AnchorPane>
