--- a/src/shorelineexamproject/gui/view/ConversionView.fxml
+++ b/src/shorelineexamproject/gui/view/ConversionView.fxml
@@ -13,7 +13,7 @@
    <children>
       <JFXButton fx:id="btnGet" layoutX="224.0" layoutY="88.0" onAction="#clickGet" ripplerFill="#0c8bb8" text="Get" AnchorPane.leftAnchor="224.0" AnchorPane.topAnchor="85.0" />
       <JFXButton layoutX="559.0" layoutY="27.0" onAction="#clickCreateJSONFile" ripplerFill="#0c8bb8" text="Create JSONFile" AnchorPane.bottomAnchor="675.0" AnchorPane.rightAnchor="28.0" />
-      <JFXTextField fx:id="txtJSONName" layoutX="438.0" layoutY="10.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="173.0" />
+      <JFXTextField fx:id="txtJSONName" focusColor="#0c8bb8" layoutX="438.0" layoutY="10.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="173.0" />
       <Label layoutX="266.0" layoutY="692.0" text="JSON name:" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="318.0" />
 
       <JFXTextField fx:id="txtType" focusColor="#0c8bb8" layoutX="537.0" layoutY="166.0" promptText="type" text="type" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="166.0" />
